--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ port = 3000
 
 [database]
 host = "localhost"
-port = 3306
-user = "root"
+port = 5432
+user = "admiral"
 password = "admiral"
 name = "admiral"
